[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatapult"
version = "0.1.0"
description = "A fast, Pythonic API wrapper for Google Chat webhooks."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Demetrios Lambropoulos", email = "d.lambropoulos@gmail.com" }
]
keywords = ["google chat", "webhook", "api", "wrapper", "notifications", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# httpx handles both sync and async requests, keeping our footprint small.
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.22.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatapult"]
